--- a/index.html
+++ b/index.html
@@ -48,22 +48,28 @@
 <script type="importmap">
 {
   "imports": {
-    "recharts": "https://esm.sh/recharts@^3.6.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "@google/genai": "https://esm.sh/@google/genai@^1.36.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "firebase/app": "https://esm.sh/firebase@^10.8.0/app",
-    "firebase/auth": "https://esm.sh/firebase@^10.8.0/auth",
-    "firebase/analytics": "https://esm.sh/firebase@^10.8.0/analytics",
-    "firebase/": "https://esm.sh/firebase@^10.8.0/"
+    "recharts": "https://esm.sh/recharts@3.6.0",
+    "react": "https://esm.sh/react@19.0.0",
+    "react/": "https://esm.sh/react@19.0.0/",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/": "https://esm.sh/react-dom@19.0.0/",
+    "@google/genai": "https://esm.sh/@google/genai@1.36.0",
+    "lucide-react": "https://esm.sh/lucide-react@0.460.0",
+    "firebase/app": "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js",
+    "firebase/auth": "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js",
+    "firebase/analytics": "https://www.gstatic.com/firebasejs/10.8.0/firebase-analytics.js",
+    "firebase/": "https://esm.sh/firebase@^12.8.0/"
   }
 }
 </script>
 <script>
-  // Polyfill process to prevent ReferenceErrors in browser environments
-  window.process = window.process || { env: {} };
+  // Robust polyfill for process.env to satisfy Gemini SDK and prevent startup errors
+  window.process = { 
+    env: { 
+      NODE_ENV: 'production',
+      API_KEY: '' 
+    } 
+  };
 </script>
 </head>
 <body>
