--- a/index.html
+++ b/index.html
@@ -48,22 +48,19 @@
 <script type="importmap">
 {
   "imports": {
-    "recharts": "https://esm.sh/recharts@3.6.0",
     "react": "https://esm.sh/react@19.0.0",
     "react/": "https://esm.sh/react@19.0.0/",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/": "https://esm.sh/react-dom@19.0.0/",
-    "@google/genai": "https://esm.sh/@google/genai@1.36.0",
-    "lucide-react": "https://esm.sh/lucide-react@0.460.0",
-    "firebase/app": "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js",
-    "firebase/auth": "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js",
-    "firebase/analytics": "https://www.gstatic.com/firebasejs/10.8.0/firebase-analytics.js",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "recharts": "https://esm.sh/recharts@2.15.0?deps=react@19.0.0,react-dom@19.0.0",
+    "@google/genai": "https://esm.sh/@google/genai@1.3.0",
+    "lucide-react": "https://esm.sh/lucide-react@0.460.0?deps=react@19.0.0",
     "firebase/": "https://esm.sh/firebase@^12.8.0/"
   }
 }
 </script>
 <script>
-  // Robust polyfill for process.env to satisfy Gemini SDK and prevent startup errors
   window.process = { 
     env: { 
       NODE_ENV: 'production',
@@ -74,5 +71,6 @@
 </head>
 <body>
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
