--- a/index.html
+++ b/index.html
@@ -55,18 +55,15 @@
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "recharts": "https://esm.sh/recharts@2.15.0?deps=react@19.0.0,react-dom@19.0.0",
     "@google/genai": "https://esm.sh/@google/genai@1.3.0",
-    "lucide-react": "https://esm.sh/lucide-react@0.460.0?deps=react@19.0.0",
-    "firebase/": "https://esm.sh/firebase@^12.8.0/"
+    "lucide-react": "https://esm.sh/lucide-react@0.460.0?deps=react@19.0.0"
   }
 }
 </script>
 <script>
-  window.process = { 
-    env: { 
-      NODE_ENV: 'production',
-      API_KEY: '' 
-    } 
-  };
+  // Robust polyfill: Ensure process.env exists without wiping existing values (like API_KEY)
+  window.process = window.process || {};
+  window.process.env = window.process.env || {};
+  window.process.env.NODE_ENV = window.process.env.NODE_ENV || 'production';
 </script>
 </head>
 <body>
